--- a/Gallery.html
+++ b/Gallery.html
@@ -107,19 +107,19 @@
                                 </a>
                             </div>
                             <div class="picture-container">
-                                <a href="assets/images/designs/spectropy/IMG3.jpg" target="_blank"
+                                <a href="assets/images/designs/spectropy/IMG3.JPG" target="_blank"
                                     rel="noreferrer noopener nofollow">
                                     <span>Description</span>
                                 </a>
                             </div>
                             <div class="picture-container">
-                                <a href="assets/images/designs/spectropy/IMG4.jpg" target="_blank"
+                                <a href="assets/images/designs/spectropy/IMG4.JPG" target="_blank"
                                     rel="noreferrer noopener nofollow">
                                     <span>Description</span>
                                 </a>
                             </div>
                             <div class="picture-container">
-                                <a href="assets/images/designs/spectropy/IMG5.jpg" target="_blank"
+                                <a href="assets/images/designs/spectropy/IMG5.JPG" target="_blank"
                                     rel="noreferrer noopener nofollow">
                                     <span>Description</span>
                                 </a>
