--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         </a>
 
                         <a class="socialicon hackerrank" href="https://www.hackerrank.com/profile/sdhanunjayaredd1" target="_blank" rel="author">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/HackerRank_logo.png" alt="HackerRank" width="50" height="50" style="vertical-align: middle;margin-top: 7px;"/>
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/HackerRank_logo.png" alt="HackerRank" width="50" height="50" style="vertical-align: middle;margin-left: 7px;margin-top: 7px;"/>
                         </a>
                         
 
@@ -156,7 +156,7 @@
 
                       <!-- LeetCode Logo -->
                         <a class="socialicon leetcode" href="https://leetcode.com/u/MrDhanunjaya/" target="_blank" rel="noopener noreferrer">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" width="50" height="50" style="vertical-align: middle; margin-top: 7px;" alt="LeetCode Logo" />
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/LeetCode_logo_black.png" width="50" height="50" style="vertical-align: middle; margin-left: 7px;margin-top: 7px;" alt="LeetCode Logo" />
                         </a>
                       
                         <a class="socialicon instagram" href="https://www.instagram.com/sdhanunjayareddy80741/" target="_blank" rel="author">
