--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta name="robots" content="index,follow" />
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
-    <meta property="og:site_name" content="#">
+    <meta property="og:site_name" content="https://coderdhanunjayareddy.github.io/my-portfolio/index.html">
     <meta property="og:title" content="DHANUNJAYA | Home">
     <meta property="og:description" content="This portfolio showcases my journey as an MCA student, highlighting my projects, education, skills, and experiences. Check it out to learn more about my work and expertise!">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="#">
+    <meta property="og:url" content="https://coderdhanunjayareddy.github.io/my-portfolio/index.html">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@ReddyDhanu50441">
     <meta name="application-name" content="DHANUNJAYA | Home" />
@@ -146,7 +146,7 @@
                         </a>
                         
 
-                        <a class="socialicon linkedin" href="www.linkedin.com/in/dhanunjaya-somireddy" target="_blank" rel="author">
+                        <a class="socialicon linkedin" href="https://www.linkedin.com/in/dhanunjaya-somireddy" target="_blank" rel="author">
                             <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="35" viewBox="0 0 24 24" fill="#0e76a8" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin">
                                 <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                 <rect x="2" y="9" width="4" height="12"></rect>
