--- a/event.html
+++ b/event.html
@@ -18,8 +18,8 @@
     <meta property="og:title" content="DHANUNJAYA | Event" />
     <meta property="og:type" content="profile" />
     <meta property="og:description" content="This portfolio showcases my journey as an MCA student, highlighting my projects, education, skills, and experiences. Check it out to learn more about my work and expertise!"/>
-    <meta property="og:site_name" content="#"/>
-    <meta property="og:url" content="#"/>
+    <meta property="og:site_name" content="https://coderdhanunjayareddy.github.io/my-portfolio/event.html"/>
+    <meta property="og:url" content="https://coderdhanunjayareddy.github.io/my-portfolio/event.html"/>
     <!-- Twitter Cards-->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@ReddyDhanu50441" />
