--- a/projects.html
+++ b/projects.html
@@ -19,11 +19,11 @@
     <meta name="AdsBot-Google" content="index,follow" />
 
     <!-- Open Graph for Social Media -->
-    <meta property="og:site_name" content="#" />
+    <meta property="og:site_name" content="https://coderdhanunjayareddy.github.io/my-portfolio/projects.html" />
     <meta property="og:title" content="DHANUNJAYA | Projects" />
     <meta property="og:description" content="This portfolio showcases my journey as an MCA student, highlighting my projects, education, skills, and experiences. Check it out to learn more about my work and expertise!" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="#" />
+    <meta property="og:url" content="https://coderdhanunjayareddy.github.io/my-portfolio/projects.html" />
     <meta name="twitter:card" content="summary" />
 
     <!-- Twitter Posts -->
