--- a/reference.html
+++ b/reference.html
@@ -18,11 +18,11 @@
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
 
-    <meta property="og:site_name" content="#">
+    <meta property="og:site_name" content="https://coderdhanunjayareddy.github.io/my-portfolio/reference.html">
     <meta property="og:title" content="DHANUNJAYA | reference">
     <meta property="og:description" content="This portfolio showcases my journey as an MCA student, highlighting my projects, education, skills, and experiences. Check it out to learn more about my work and expertise!">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="#">
+    <meta property="og:url" content="https://coderdhanunjayareddy.github.io/my-portfolio/reference.html">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@ReddyDhanu50441">
 
